# crownie-hedera

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-extension.yml  build-release-icp-resolver.yml
apps/extension/: ACTION_PLAN.md  index.html  package.json  tailwind.config.js  test-agent-initialization.js  test-crypto-extension.js  test-fix-validation.js  test-hedera-standalone.js  test-identity-fix.js  test-queue.js  test-rpc.sh  test-service-worker-crypto.js  tsconfig.json  vite.config.ts  vite.content.config.ts
apps/extension/public/: test-audio.m4a  test-audio.webm
apps/extension/scripts/: create-release.js  package-extension.js
apps/extension/src/: App.tsx  auth-callback.html  auth-callback.js  auth-injector.js  env.d.ts  (+5 more)
apps/main-interface/: package.json  tailwind.config.js
apps/web-interface/: index.html  package.json  tailwind.config.js  vite.config.ts
bridges/fusion-icp-bridge/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  README.md  dfx.json  jest.config.js  package.json  pnpm-workspace.yaml
bridges/fusion-icp-bridge/src/wallet_canister/: Cargo.toml  wallet_canister.did
bridges/fusion-icp-bridge/src/wallet_canister/src/: evm_client.rs  lib.rs  types.rs
crownie-swap/: .env-example  eslint.config.mjs  foundry.toml  package.json  remappings.txt  tsconfig.json
crownie-swap/scripts/: deploy.ts  fund.ts
crownie-swap/tests/: config.ts  local-swap.spec.ts  test-hedera-swap.test.ts  test-hedera-swap.ts  wallet.ts
fusion-icp-bridge/: package.json
(+116 files in other folders)
